# FrankaLerobotLogger

./: diffusion.py  episode0000_joints.parquet  franka_loger.py  package.xml  readme.md  sasho_run_cam.bash  sasho_run_script.bash  setup.cfg  setup.py
config/: config_camera0.yaml  config_camera1.yaml  config_camera1yaml  convert_params.yaml  logger_params.yaml  sasho_config.yaml  sasho_convert.yaml
diffusion/: .gitignore  README.md  pi0_droidsim.yaml  pi0_robot.yaml  pi0_server.yaml  pyproject.toml  test.py
franka_gello_state_publisher/config/: example_single.yaml
franka_gello_state_publisher/franka_gello_state_publisher/: gello_hardware.py
franka_loger/: convert_to_lerobot.py  franka_loger.py  transform_lerobot.py
joints/: episode0000_joints.parquet  episode0001_joints.parquet  episode0002_joints.parquet  episode0003_joints.parquet  episode0004_joints.parquet  episode0005_joints.parquet  episode0006_joints.parquet  episode0007_joints.parquet  episode0008_joints.parquet  episode0009_joints.parquet  episode0010_joints.parquet
launch/: log_launch.py
