[project]
name = "pi0-eval"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "robot-inference-api[client,policy-server]",
]

# Because for droidsim we need to use a branch of openpi, we do the following:
# - We declare two conflicting dependency groups: default and droidsim
# - The default group contains the default openpi
# - The droidsim group contains the droidsim specific version of openpi
# - The default group in installed by default
# - The droidsim group can be installed by passing the "--no-default-groups --group droidsim" flag to uv run or uv sync

[tool.uv.sources]
robot-inference-api = { path = "../../", editable = true }
openpi = [
    { git = "https://github.com/Physical-Intelligence/openpi.git", rev = "5bff19b0c0c447c7a7eaaaccf03f36d50998ec9d", group = "default" },
    { git = "https://github.com/Physical-Intelligence/openpi.git", branch = "karl/droid_policies", group = "droidsim" },
]
openpi-client = [
    { git = "git+https://github.com/Physical-Intelligence/openpi.git", rev = "5bff19b0c0c447c7a7eaaaccf03f36d50998ec9d", subdirectory = "packages/openpi-client", group = "default" },
    { git = "git+https://github.com/Physical-Intelligence/openpi.git", branch = "karl/droid_policies", subdirectory = "packages/openpi-client", group = "droidsim" },
]
databib = { git = "https://github.com/psi-robotics/databib.git" }


[tool.uv]
default-groups = ["default"]
conflicts = [
    [
      { group = "default" },
      { group = "droidsim" },
    ],
]
override-dependencies = [
    "lerobot @ git+https://github.com/huggingface/lerobot@0cf864870cf29f4738d3ade893e6fd13fbd7cdb5"
]

[dependency-groups]
default = [
    "openpi",
    "openpi-client",
]
droidsim = [
    "openpi",
    "openpi-client",
]
